* Search categories & locations when creating or editing transaction
* Login using additional credentials
* Tweak spacing of graph